quick z-index fix

--- a/css/style.css
+++ b/css/style.css
@@ -233,7 +233,7 @@ main .main__contact .fab:hover {
 header {
   padding: 0.75em;
   margin-bottom: 1em;
-  z-index: 1;
+  z-index: 100;
   position: sticky;
   top: 0;
 }
