--- a/sass/pages/_header.scss
+++ b/sass/pages/_header.scss
@@ -1,7 +1,7 @@
 header {
     padding: 0.75em;
     margin-bottom: 1em;
-    z-index: 1;
+    z-index: 100;
     position: sticky;
     top: 0;
 
